--- a/SIRELAB-UC/SIRELAB-UC-war/web/resources/css/general.css
+++ b/SIRELAB-UC/SIRELAB-UC-war/web/resources/css/general.css
@@ -1,5 +1,6 @@
 body {
     background-color: #F2F2F2;
+    background: url("http://www.ucentral.edu.co/images/template_images/ucentral/fondos/fondo_template_default.jpg") center fixed;
     font-size: 12px;
     font-family: Verdana, "Verdana CE",  Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
     color: #000000;  
@@ -17,8 +18,6 @@ h1 {
 }
 
 .menubarStyle{
-    background-color: #819FF7;
-    text-transform: uppercase;
     color: #000000;
     font-size: 12px;
     font-family: Verdana, "Verdana CE",  Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
@@ -30,8 +29,27 @@ h1 {
     border-color: #000000;
     border-width: 1px;
     width: 98%; 
-    height: 500px;
+    height: 490px;
     position: absolute; 
     top: 150px;
     font-size: 12px;
+    background-color: transparent;
+}
+
+.tabViewMenu{
+    position: absolute;
+    left: 10px;
+    top: 30px;
+    height: 455px;
+    width: 1315px;
+    background-color: transparent;
+    border-color: #000000;
+    border-width: 1px;
+}
+
+.separatorMenuInicial{
+    position: absolute; 
+    top: 40px;
+    width: 1px;
+    height: 405px;
 }
